Alteração da atividade

--- a/texto.html.html
+++ b/texto.html.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,12 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <dl>
-        <dt><h2>Noticia</h2></dt>
-        <dd><h1>Tecnologia</h1></dd>
-    </dl>
-    
-    <p><h2> manhã desta sexta-feira, 13, certificamos 201 idosos do Projeto Chá Tecnológico e Social em Maracanaú.
+    <a href="./minha-homepage.html">Voltar para homepage</a>
+    <div>
+    <h1>Certificamos 201 idosos do Projeto Chá Tecnológico e Social em Maracanaú.</h1>
+    <section>
+    <p> manhã desta sexta-feira, 13, certificamos 201 idosos do Projeto Chá Tecnológico e Social em Maracanaú.
          A solenidade contou com a presença do Prefeito de Maracanaú, Roberto Pessoa, do Secretário de Assistência 
          Social e Cidadania, Chico Barbeiro, de representantes do Conselho Municipal dos Direitos da Pessoa Idosa,
         além da Gestora de RH da Lunelli, Susana Rayl, e o Gerente Administrativo da Gerdau do Norte e Nordeste, Jeferson Pires.
@@ -24,7 +23,9 @@
            outros temas de interesse da geração 60+.
         
         O projeto é realizado pelo Instituto Idear, com a parceria do Conselho Municipal dos Direitos
-         da Pessoa Idosa e a Secretaria de Assistência Social, além de diversas empresas patrocinadoras.</h2> </p>
+         da Pessoa Idosa e a Secretaria de Assistência Social, além de diversas empresas patrocinadoras. </p>
         <img src="./imagens/Pessoas-felizes.jpg" alt="pessoas felizes ">
+    </section>
+    </div>
 </body>
 </html>
